--- a/darkmode.css
+++ b/darkmode.css
@@ -3,7 +3,8 @@
 @import url('https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css');
 
 body {
- background:#131313 !important;
+ /*background:#131313 !important;*/
+ background:#FF0000 !important;
  color:white !important;
  font-family:'Roboto',sans-serif
 }
