--- a/darkmode.css
+++ b/darkmode.css
@@ -1896,3 +1896,7 @@ button[data-testid=query-visualizer-btn]::before {
 .eureka-search-bar-module__searchBarWrapper {
   background: #000000;
 }
+
+.eureka-search-bar-module__searchBarWrapper .layout-module__horizontal {
+  background: #000000;
+}
